# puzzleverse

./: background-admin.md  background-dev.md  background-player.md  background-writer.md  puzzle-pieces.md
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: gradiator.rs  main.rs
core/: Cargo.toml
core/src/: asset_store.rs  lib.rs
server/: Cargo.toml
server/migrations/00000000000001_puzzleverse_base/: down.sql  up.sql
server/src/: asset_store.rs  main.rs  player_state.rs  schema.rs
server/src/auth/: db_otp.rs  fixed_otp.rs  fixed_password.rs  ldap.rs  mod.rs  php_bb.rs  uru.rs
server/src/puzzle/: arithmetic.rs  buffer.rs  button.rs  clock.rs  comparator.rs  counter.rs  holiday.rs  index.rs  index_list.rs  logic.rs  metronome.rs  mod.rs  permutation.rs  proximity.rs  radio_button.rs  realm_selector.rs  sink.rs  switch.rs  timer.rs
server/src/realm/: mod.rs  navigation.rs
